--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ workflows:
             - AWS-Root-Account
             - Slack-Context
           account_id_1: '408067220840'
-          repo: remix-starter # update with actual repo name
+          repo: hooli-demo-web # update with actual repo name
           image_tag_1: '${CIRCLE_BRANCH}-${CIRCLE_BUILD_NUM}'
           image_tag_2: dev-latest
           filters:
@@ -43,9 +43,9 @@ workflows:
             - AWS-Root-Account
             - Slack-Context
           account_id: '408067220840'
-          repo: remix-starter # update with actual repo name
-          deployment: remix-starter # update with actual deployment name
-          cluster_name: 'dev-account-saas-cluster'
+          repo: hooli-demo-web # update with actual repo name
+          deployment: hooli-demo-web # update with actual deployment name
+          cluster_name: 'dev-account-customer-cluster'
           image_tag: 'dev-latest'
           filters:
             branches:
@@ -69,8 +69,7 @@ workflows:
             - AWS-Root-Account
             - Slack-Context
           account_id_1: '032538391126'
-          account_id_2: '574388719779'
-          repo: remix-starter # update with actual repo name
+          repo: hooli-demo-web # update with actual repo name
           image_tag_1: '${CIRCLE_TAG}'
           image_tag_2: sandbox-latest
           filters:
@@ -87,9 +86,9 @@ workflows:
             - AWS-Root-Account
             - Slack-Context
           account_id: '032538391126'
-          repo: remix-starter # update with actual repo name
-          deployment: remix-starter # update with actual deployment name
-          cluster_name: 'sandbox-account-saas-cluster'
+          repo: hooli-demo-web # update with actual repo name
+          deployment: hooli-demo-web # update with actual deployment name
+          cluster_name: 'sandbox-account-customer-cluster'
           image_tag: '${CIRCLE_TAG}'
           slack_pass_notify_template: success_tagged_deploy_1
           filters:
@@ -114,7 +113,7 @@ workflows:
             - AWS-Root-Account
             - Slack-Context
           account_id_1: '408067220840'
-          repo: remix-starter # update with actual repo name
+          repo: hooli-demo-web # update with actual repo name
           image_tag_1: '${CIRCLE_BRANCH}-${CIRCLE_BUILD_NUM}'
           image_tag_2: test-latest
           filters:
@@ -130,9 +129,9 @@ workflows:
             - AWS-Root-Account
             - Slack-Context
           account_id: '408067220840'
-          repo: remix-starter # update with actual repo name
-          deployment: remix-starter # update with actual deployment name
-          cluster_name: 'dev-account-saas-cluster'
+          repo: hooli-demo-web # update with actual repo name
+          deployment: hooli-demo-web # update with actual deployment name
+          cluster_name: 'dev-account-customer-cluster'
           image_tag: 'test-latest'
           filters:
             branches:
