docs: updated README and .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,12 @@
 # Environment
 NODE_ENV=local
-PORT=3000
+PORT=7040
 SESSION_SECRET=
 UNUM_API_KEY=
-CORE_SERVICE_URL=
-
-# Observability, logging, etc
-# LogRocket
-LOG_ROCKET_ID=
-LOG_ROCKET_PROJECT_NAME=
+CORE_SERVICE_URL='https://core-api.sandbox-unumid.co'
 
 # winston
 LOG_LEVEL=debug
 
 # New Relic
-NEW_RELIC_ENABLED=
-NEW_RELIC_APP_NAME=
-NEW_RELIC_LICENSE_KEY=
-NEW_RELIC_LOGGING_LICENSE_KEY=
+NEW_RELIC_ENABLED=false
