--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  unumid: unumid/unumid-app-orb@0.7.0
+  unumid: unumid/unumid-app-orb@dev:fix
 
 workflows:
   lint-and-test:
