docs(readme): added back env vars and added comment

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,16 @@ SESSION_SECRET=
 UNUM_API_KEY=
 CORE_SERVICE_URL='https://core-api.sandbox-unumid.co'
 
+# Observability, logging, etc - not needed to run locally
+# LogRocket
+LOG_ROCKET_ID=
+LOG_ROCKET_PROJECT_NAME=
+
 # winston
 LOG_LEVEL=debug
 
-# New Relic
+# New Relic - not needed to run locally
 NEW_RELIC_ENABLED=false
+NEW_RELIC_APP_NAME=
+NEW_RELIC_LICENSE_KEY=
+NEW_RELIC_LOGGING_LICENSE_KEY=
