--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Environment
 NODE_ENV=local
-PORT=3000
+PORT=7040
 SESSION_SECRET=
 UNUM_API_KEY=
-CORE_SERVICE_URL=
+CORE_SERVICE_URL='https://core-api.sandbox-unumid.co'
 
-# Observability, logging, etc
+# Observability, logging, etc - not needed to run locally
 # LogRocket
 LOG_ROCKET_ID=
 LOG_ROCKET_PROJECT_NAME=
@@ -13,8 +13,8 @@ LOG_ROCKET_PROJECT_NAME=
 # winston
 LOG_LEVEL=debug
 
-# New Relic
-NEW_RELIC_ENABLED=
+# New Relic - not needed to run locally
+NEW_RELIC_ENABLED=false
 NEW_RELIC_APP_NAME=
 NEW_RELIC_LICENSE_KEY=
 NEW_RELIC_LOGGING_LICENSE_KEY=
