--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "private": true,
   "sideEffects": false,
+  "engines": {
+    "node": "18.15.0",
+    "npm": "9.5.0"
+  },
   "scripts": {
     "build": "remix build",
     "dev": "remix build && run-p \"dev:*\"",
@@ -93,8 +96,5 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
-  },
-  "engines": {
-    "node": ">=14"
   }
 }
