feat: add partner onboarding flow

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ PORT=7040
 SESSION_SECRET=
 UNUM_API_KEY=
 CORE_SERVICE_URL='https://core-api.sandbox-unumid.co'
+PARTNER_UUID=
 
 # Observability, logging, etc - not needed to run locally
 # LogRocket
