--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ workflows:
                 - main
 
       - unumid/deploy-image:
+          name: unumid/deploy-image-dev
           requires:
             - unumid/build-and-push-image
           context:
@@ -46,6 +47,24 @@ workflows:
           account_id: '408067220840'
           repo: hooli-demo-web # update with actual repo name
           deployment: hooli-demo-web # update with actual deployment name
+          cluster_name: 'dev-account-saas-cluster'
+          namespace: demos
+          image_tag: 'dev-latest'
+          filters:
+            branches:
+              only:
+                - main
+
+      - unumid/deploy-image:
+          name: unumid/deploy-image-dev-partner
+          requires:
+            - unumid/build-and-push-image
+          context:
+            - AWS-Root-Account
+            - Slack-Context
+          account_id: '408067220840'
+          repo: hooli-demo-web # update with actual repo name
+          deployment: hooli-partner-demo-web # update with actual deployment name
           cluster_name: 'dev-account-saas-cluster'
           namespace: demos
           image_tag: 'dev-latest'
@@ -101,6 +120,26 @@ workflows:
             branches:
               ignore: /.*/
 
+      - unumid/deploy-image:
+          name: unumid/deploy-image-sandbox-partner
+          requires:
+            - unumid/build-and-push-image-sandbox
+          context:
+            - AWS-Root-Account
+            - Slack-Context
+          account_id: '032538391126'
+          repo: hooli-demo-web # update with actual repo name
+          deployment: hooli-partner-demo-web # update with actual deployment name
+          cluster_name: 'sandbox-account-saas-cluster'
+          namespace: demos
+          image_tag: '${CIRCLE_TAG}'
+          slack_pass_notify_template: success_tagged_deploy_1
+          filters:
+            tags:
+              only: /^v\d+\.\d+\.\d+/
+            branches:
+              ignore: /.*/
+
   build-and-deploy-test:
     jobs:
       - unumid/build-and-push-image:
@@ -127,6 +166,23 @@ workflows:
           account_id: '408067220840'
           repo: hooli-demo-web # update with actual repo name
           deployment: hooli-demo-web # update with actual deployment name
+          cluster_name: 'dev-account-saas-cluster'
+          namespace: demos
+          image_tag: 'test-latest'
+          filters:
+            branches:
+              only:
+                - test-circleci
+      - unumid/deploy-image:
+          name: unumid/deploy-image-test-partner
+          requires:
+            - unumid/build-and-push-image-test
+          context:
+            - AWS-Root-Account
+            - Slack-Context
+          account_id: '408067220840'
+          repo: hooli-demo-web # update with actual repo name
+          deployment: hooli-partner-demo-web # update with actual deployment name
           cluster_name: 'dev-account-saas-cluster'
           namespace: demos
           image_tag: 'test-latest'
