--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Environment
 NODE_ENV=local
+ENV=local
 PORT=7040
 SESSION_SECRET=
 UNUM_API_KEY=
@@ -19,3 +20,6 @@ NEW_RELIC_ENABLED=false
 NEW_RELIC_APP_NAME=
 NEW_RELIC_LICENSE_KEY=
 NEW_RELIC_LOGGING_LICENSE_KEY=
+
+# sentry
+SENTRY_DSN=
