--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "sideEffects": false,
   "engines": {
-    "node": "20.10.0",
+    "node": "20.10.0-alpine",
     "npm": "9.5.0"
   },
   "scripts": {
