--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
 version: 2.1
 
 orbs:
-  unumid: unumid/unumid-app-orb@1.3.0
+  unumid: unumid/unumid-app-orb@2.0.0
 
 workflows:
   lint-and-test:
     jobs:
       - unumid/lint-and-test:
-          compile_script_name: 'build'
+          compile_script_name: build
           filters:
             branches:
               ignore:
@@ -16,7 +16,8 @@ workflows:
   build-and-deploy:
     jobs:
       - unumid/lint-and-test:
-          compile_script_name: 'build'
+          compile_script_name: build
+          enable_slack_failure_notification: true
           filters:
             branches:
               only:
@@ -63,9 +64,9 @@ workflows:
           account_id: '408067220840'
           repo: hooli-demo-web # update with actual repo name
           deployment: hooli-demo-web # update with actual deployment name
-          cluster_name: 'dev-account-saas-cluster'
+          cluster_name: dev-account-saas-cluster
           namespace: demos
-          image_tag: 'dev-latest'
+          image_tag: dev-latest
           filters:
             branches:
               only:
@@ -81,38 +82,39 @@ workflows:
           account_id: '408067220840'
           repo: hooli-demo-web # update with actual repo name
           deployment: hooli-partner-demo-web # update with actual deployment name
-          cluster_name: 'dev-account-saas-cluster'
+          cluster_name: dev-account-saas-cluster
           namespace: demos
-          image_tag: 'dev-latest'
+          image_tag: dev-latest
           filters:
             branches:
               only:
                 - main
 
-  build-and-deploy-sandbox:
+  build-and-deploy-staging:
     jobs:
       - unumid/lint-and-test:
-          compile_script_name: 'build'
+          compile_script_name: build
           filters:
             tags:
-              only: /^v.*/
+              only: /^v\d+\.\d+\.\d+.*$/
             branches:
               ignore: /.*/
 
       - unumid/build-and-push-image:
-          name: unumid/build-and-push-image-sandbox
+          name: unumid/build-and-push-image-staging
           requires:
             - unumid/lint-and-test
           context:
             - AWS-Root-Account
             - Slack-Context
-          account_id_1: '032538391126'
+          account_id_1: 058264190665
+          publish_image_tag_1: true
           repo: hooli-demo-web # update with actual repo name
           image_tag_1: '${CIRCLE_TAG}'
-          image_tag_2: sandbox-latest
+          image_tag_2: staging-latest
           filters:
             tags:
-              only: /^v\d+\.\d+\.\d+/
+              only: /^v\d+\.\d+\.\d+.*$/
             branches:
               ignore: /.*/
 
@@ -129,21 +131,21 @@ workflows:
           sentry_project: hooli-demo-web
           filters:
             tags:
-              only: /^v\d+\.\d+\.\d+/
+              only: /^v\d+\.\d+\.\d+.*$/
             branches:
               ignore: /.*/
 
       - unumid/deploy-image:
-          name: unumid/deploy-image-sandbox
+          name: unumid/deploy-image-staging
           requires:
-            - unumid/build-and-push-image-sandbox
+            - unumid/build-and-push-image-staging
           context:
             - AWS-Root-Account
             - Slack-Context
-          account_id: '032538391126'
+          account_id: 058264190665
           repo: hooli-demo-web # update with actual repo name
           deployment: hooli-demo-web # update with actual deployment name
-          cluster_name: 'sandbox-account-saas-cluster'
+          cluster_name: staging-account-core-cluster
           namespace: demos
           image_tag: '${CIRCLE_TAG}'
           slack_pass_notify_template: success_tagged_deploy_1
@@ -154,16 +156,16 @@ workflows:
               ignore: /.*/
 
       - unumid/deploy-image:
-          name: unumid/deploy-image-sandbox-partner
+          name: unumid/deploy-image-staging-partner
           requires:
-            - unumid/build-and-push-image-sandbox
+            - unumid/build-and-push-image-staging
           context:
             - AWS-Root-Account
             - Slack-Context
-          account_id: '032538391126'
+          account_id: 058264190665
           repo: hooli-demo-web # update with actual repo name
           deployment: hooli-partner-demo-web # update with actual deployment name
-          cluster_name: 'sandbox-account-saas-cluster'
+          cluster_name: staging-account-core-cluster
           namespace: demos
           image_tag: '${CIRCLE_TAG}'
           slack_pass_notify_template: success_tagged_deploy_1
@@ -213,9 +215,9 @@ workflows:
           account_id: '408067220840'
           repo: hooli-demo-web # update with actual repo name
           deployment: hooli-demo-web # update with actual deployment name
-          cluster_name: 'dev-account-saas-cluster'
+          cluster_name: dev-account-saas-cluster
           namespace: demos
-          image_tag: 'test-latest'
+          image_tag: test-latest
           filters:
             branches:
               only:
@@ -230,9 +232,9 @@ workflows:
           account_id: '408067220840'
           repo: hooli-demo-web # update with actual repo name
           deployment: hooli-partner-demo-web # update with actual deployment name
-          cluster_name: 'dev-account-saas-cluster'
+          cluster_name: dev-account-saas-cluster
           namespace: demos
-          image_tag: 'test-latest'
+          image_tag: test-latest
           filters:
             branches:
               only:
