[CI] sentry org named updated.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ workflows:
           script_name: sentry:upload_sourcemaps
           compile_script_name: build:sourcemap
           cache_version: v6
-          sentry_org: verified-inc
+          sentry_org: verified-network
           sentry_project: hooli-demo-web
           filters:
             branches:
@@ -128,7 +128,7 @@ workflows:
           script_name: sentry:upload_sourcemaps
           compile_script_name: build:sourcemap
           cache_version: v6
-          sentry_org: verified-inc
+          sentry_org: verified-network
           sentry_project: hooli-demo-web
           filters:
             tags:
@@ -199,7 +199,7 @@ workflows:
           script_name: sentry:upload_sourcemaps
           compile_script_name: build:sourcemap
           cache_version: v6
-          sentry_org: verified-inc
+          sentry_org: verified-network
           sentry_project: hooli-demo-web
           filters:
             branches:
